Fix alignment of provider icon

--- a/css/style.css
+++ b/css/style.css
@@ -97,7 +97,7 @@
 .quick-actions-listEntry .quick-actions-provider-icon {
   position: absolute;
   right: 10px;
-  top: 15px;
+  top: 13px;
 }
 
 .quick-actions-listEntry .quick-actions-status-icon {
